Updated pom and Plugin algorithm

--- a/plugin.properties
+++ b/plugin.properties
@@ -1,5 +1,5 @@
 plugin.id=causal-algorithm-plugin
-plugin.class=edu.pitt.dbmi.causal.plugin.algorithm.PluginAlgorithm
+plugin.class=edu.pitt.dbmi.causal.plugin.algorithm.CausalPluginAlgorithm
 plugin.version=0.0.1
 plugin.provider=Chirayu Wongchokprasitti
 plugin.dependencies=
